# ag-codemapper

./: .adkignore  .env.template  .gitignore  Agents.md  LICENSE  README.md  mcp_config.json.template  pyproject.toml  requirements.txt  setup.sh
.agents/: CONTEXT.md
.agents/skills/architect_analyzer/: skill.md
.agents/skills/code_explainer/: skill.md
.agents/skills/pipeline_mapper/: skill.md
app/: agent.py
examples/: analysis_report.md
