[project]
name = "ag-codemapper"
version = "0.1.0"
description = "ADK 2.0 Agent for Code Comprehension and Dependency Analysis"
authors = [
    {name = "VersionO"},
]

dependencies = [
    "google-adk>=2.0.0,<3.0.0",
    "codegraphcontext>=0.5.1",
]
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
